app/components/Footer/Footer.scss
.container {
  position: relative;
  display: grid;
  grid-template-areas:
    'logo'
    'nav'
    'newsletter'
    'language-switch'
    'copyright';
  grid-template-columns: 1fr;
  gap: 40px 20px;
  justify-items: center;
  width: 100%;
  padding: 32px 24px 20px;
  text-align: center;
  background: var(--background);
  border-top: 1px solid var(--line);
  border-right: 1px solid var(--line);
  border-left: 1px solid var(--line);
  @media (min-width: 640px) {
    grid-template-areas:
      'logo logo'
      'nav nav'
      'newsletter language-switch'
      'copyright copyright';
    grid-template-columns: 1fr 1fr;
    justify-items: unset;
    text-align: left;
  }
  @media (min-width: 768px) {
    padding: 32px 40px 20px 30px;
  }
  @media (min-width: 1024px) {
    grid-template-areas:
      'logo nav nav'
      'newsletter nav nav'
      'newsletter copyright language-switch';
    grid-template-columns: 272px 1fr 272px;
    gap: 30px 20px;
  }

  ul,
  li {
    padding: 0;
    margin: 0;
    list-style: none;
  }
}

.logoLink {
  display: block;
  grid-area: logo;

  > img {
    display: block;
  }
}

.nav {
  grid-area: nav;
}

.navContainer {
  display: flex;
  flex-wrap: wrap;
  gap: 40px;
  padding: 0;
  margin: 0;
  @media (min-width: 1024px) {
    flex-wrap: nowrap;
    gap: 60px;
    justify-content: flex-end;
  }
}

.list {
  flex: 1 0 140px;
  @media (min-width: 640px) {
    flex: 1 0 128px;
  }
  @media (min-width: 1024px) {
    flex: unset;
  }

  a {
    color: var(--text-secondary);
  }

  li {
    margin-bottom: 10px;

    &:last-child {
      margin-bottom: 0;
    }
  }

  &.isLegalInformation {
    max-width: 186px;
  }
}

.listHeadline {
  margin: 0 0 10px;
  font-weight: 500;
  color: var(--text);
}

.newsletterContainer {
  grid-area: newsletter;
  @media (min-width: 640px) {
    align-self: flex-end;
    justify-self: flex-start;
  }
}

.languageSwitchContainer {
  grid-area: language-switch;
  @media (min-width: 640px) {
    align-self: flex-end;
    justify-self: flex-end;
  }
}

.copyright {
  grid-area: copyright;
  align-self: flex-end;
  min-width: 70%;
  margin: 0;
  font-size: 12px;
  color: var(--text-secondary);
  text-align: center;
}

.madeByText {
  position: relative;

  &:hover {
    opacity: 1;

    .niceAF {
      opacity: 0;
    }

    .names {
      opacity: 1;
      transform: translateY(0);
    }
  }
}

.niceAFLogo {
  margin: -2px 4px 0 5px;
  vertical-align: middle;
}

.niceAF {
  opacity: 1;
  transition: opacity 0.25s ease;
}

.names {
  position: absolute;
  top: -2.45px;
  left: 30px;
  white-space: nowrap;
  pointer-events: none;
  opacity: 0;
  transition:
    transform 0.25s ease,
    opacity 0.25s ease;
  transform: translateY(60%);
}

